--- a/210224/00_push_change.html
+++ b/210224/00_push_change.html
@@ -17,6 +17,8 @@
             var adiv = document.getElementsByClassName("adiv")[0];
             alert(adiv);
          }
+        //  ctrl + k + c 주석설정
+        // ctrl + k + u  주석해제
     </script>
     <style>
         .adiv{
